Modificando página de locales

--- a/pages/locales.html
+++ b/pages/locales.html
@@ -55,25 +55,25 @@
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/1.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Tataki Restaurante</h5>
+                <p class="card-text">Valoración 4.3</p>
+                <a href="https://www.tataki.com.ar/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">SushiClub</h5>
+                <p class="card-text">Valoración 4.3</p>
+                <a href="https://www.sushiclub.com.ar/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/3.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Tori Tori Japanese</h5>
+                <p class="card-text">Valoración 4.7</p>
+                <a href="http://toritori.com.ar/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             </section>
@@ -81,25 +81,25 @@
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Peches Magda</h5>
+                <p class="card-text">Valoración 4.7</p>
+                <a href="https://pedix.app/pechesmagda/categorias" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/5.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Pastrypanas</h5>
+                <p class="card-text">Valoración 5.0</p>
+                <a href="https://pastrypanas.negocio.site/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/6.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">TuArepa.com</h5>
+                <p class="card-text">Valoración 4.1</p>
+                <a href="https://tuarepacom.business.site/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             </section>
@@ -107,25 +107,25 @@
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/7.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Restaurante COYA</h5>
+                <p class="card-text">Valoración 3.9</p>
+                <a href="https://es-es.facebook.com/CoyaRestauranteDeComidaPeruana" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/8.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Restaurante RAWA</h5>
+                <p class="card-text">Valoración 4.2</p>
+                <a href="https://cristina0804.wixsite.com/rawaa" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="/images/locales/9.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">Nombre del local</h5>
-                <p class="card-text">Valoración</p>
-                <a href="https://www.google.com.ar/maps" class="btn btn-primary">Visitar</a>
+                <h5 class="card-title">Status</h5>
+                <p class="card-text">Valoración 4.0</p>
+                <a href="http://restaurant-status.com.ar/" class="btn btn-primary" target="_blank">Visitar</a>
                 </div>
             </div>
             </section> 
